styles.css
body {
    background-color: black;
    margin: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#gameContainer {
    position: relative;
    aspect-ratio: 16 / 9;
    height: 100vh;
}

canvas {
    width: 100%;

    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;
}

@font-face {
    font-family: GSC;
    src: url(assets/Fonts/pokemon-gsc.otf.woff2);
}

#txt-box {
    position: absolute;
    
    left: 7.8%;
    right: 7.8%;
    bottom: 3.4%; 
    height: 26%;
    
    background-color: #F8F8F8;
    border: 6.0vmin solid;
    border-image-source: url('assets/Windowskins/speech\ 1.png');
    border-image-slice: 18;
    border-image-repeat: repeat;

    box-shadow: 0.8rem 0.8rem black;

    image-rendering: pixelated;
}

#txt {
    font-family: GSC;
    font-size: 5.0vmin;
    margin-top: 4%;
    margin-left: 2%; 
    margin-right: 2%; 
    line-height: 1.7;
    color: black;
}

